swagger: overall readable api docs
